--- a/server/package.json
+++ b/server/package.json
@@ -9,8 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.6"
+    "express": "^4.17.1"
   }
 }
