--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,13 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "bootstrap": "^4.5.3",
+    "google-maps-react": "^2.0.6",
     "material-ui-rating": "^4.2.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-bootstrap-sidebar": "0.0.1",
     "react-dom": "^17.0.1",
+    "react-geolocated": "^3.1.0",
     "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
