--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.7",
+    "socket.io": "^3.1.1",
     "sqlite3": "^5.0.1"
   }
 }
