--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.5.3",
     "google-maps-react": "^2.0.6",
     "material-ui-rating": "^4.2.0",
+    "material-ui-slider": "^3.0.8",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-bootstrap-sidebar": "0.0.1",
