--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,12 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-bootstrap-sidebar": "0.0.1",
+    "react-datepicker": "^3.4.1",
     "react-dom": "^17.0.1",
     "react-geolocated": "^3.1.0",
     "react-icons": "^4.1.0",
     "react-load-script": "0.0.6",
+    "react-number-picker": "^1.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "socket.io-client": "^3.1.1",
