--- a/client/package.json
+++ b/client/package.json
@@ -21,13 +21,14 @@
     "react-icons": "^4.1.0",
     "react-load-script": "0.0.6",
     "react-number-picker": "^1.0.5",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "socket.io-client": "^3.1.1",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
-  "proxy": "http://192.168.1.123:3001/",
+  "proxy": "http://localhost:3001/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
